# emlo4-session04-assignment

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
scripts/: eval.sh  infer.sh  train.sh
src/: eval.py  infer.py  train.py
src/datamodules/: catdog_datamodule.py  dog_breed_datamodule.py
src/models/: catdog_classifier.py  dog_breed_classifier.py
src/utils/: callbacks.py  logging_utils.py  visualization.py
