[project]
name = "eml04-session-04-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.8.0",
    "gdown>=5.2.0",
    "lightning>=2.4.0",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "requests>=2.32.3",
    "rich>=13.8.1",
    "tensorboard>=2.18.0",
    "timm>=1.0.9",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]
